--- a/Bowdoin Tour Guide/MainStoryboard_iPhone.storyboard
+++ b/Bowdoin Tour Guide/MainStoryboard_iPhone.storyboard
@@ -30,9 +30,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems>
-                        <barButtonItem image="Follow.png" id="r0F-3X-P9L"/>
+                        <barButtonItem image="Normal.png" id="r0F-3X-P9L">
+                            <inset key="imageInsets" minX="15" minY="6" maxX="15" maxY="8"/>
+                        </barButtonItem>
                     </toolbarItems>
-                    <navigationItem key="navigationItem" title="Bowdoin College" id="U3v-NW-OsS"/>
+                    <navigationItem key="navigationItem" title="Bowdoin College" id="U3v-NW-OsS">
+                        <barButtonItem key="backBarButtonItem" title="Map" id="uEd-yf-Idn"/>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="blackTranslucent"/>
                     <connections>
                         <outlet property="activityIndicator" destination="h4h-ea-d9b" id="DmT-Dm-bZz"/>
@@ -68,7 +72,9 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Unknown Building" id="VlI-Mp-6CJ"/>
+                    <navigationItem key="navigationItem" title="Unknown Building" id="VlI-Mp-6CJ">
+                        <barButtonItem key="backBarButtonItem" title="Tour" id="y65-Qh-NWU"/>
+                    </navigationItem>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imgView" destination="9G6-8Q-1dk" id="he7-SJ-aLz"/>
@@ -88,20 +94,50 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView multipleTouchEnabled="YES" contentMode="scaleToFill" scalesPageToFit="YES" id="bdS-U3-iIT">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" id="tLG-cn-xSb">
+                                <rect key="frame" x="0.0" y="372" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="UQc-if-d52"/>
+                                    <barButtonItem image="Back.png" width="16" style="plain" id="vQU-4c-Mec">
+                                        <inset key="imageInsets" minX="9" minY="7" maxX="0.0" maxY="3"/>
+                                        <connections>
+                                            <action selector="backPressed:" destination="Tu0-jG-DEn" id="IbQ-MJ-srY"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="UKj-vs-Rpv"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="7yc-Lg-74K"/>
+                                    <barButtonItem style="plain" systemItem="play" id="liP-Wy-CNt">
+                                        <connections>
+                                            <action selector="forwardPressed:" destination="Tu0-jG-DEn" id="qmr-Sh-xLB"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Loo-2K-5kX"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="mcn-6u-Vbw"/>
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="guR-Lp-iXl"/>
+                        <barButtonItem systemItem="reply" id="8XE-Jv-gDQ"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="7hd-fy-i4v"/>
+                        <barButtonItem systemItem="refresh" id="ndb-p0-aMf"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="2WW-9x-ZAx"/>
+                        <barButtonItem systemItem="play" id="uX5-rP-Gf5"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Var-Ou-ybU"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="Explore Bowdoin" id="mcn-6u-Vbw"/>
                     <connections>
                         <outlet property="webView" destination="bdS-U3-iIT" id="uc6-tf-KzJ"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1470" y="86"/>
+            <point key="canvasLocation" x="1453" y="86"/>
         </scene>
         <scene sceneID="xPr-3j-Kz7">
             <objects>
@@ -123,7 +159,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Follow.png" width="20" height="20"/>
+        <image name="Back.png" width="24" height="28"/>
+        <image name="Normal.png" width="28" height="28"/>
     </resources>
     <classes>
         <class className="BuildingViewController" superclassName="UIViewController">
@@ -145,6 +182,9 @@
         <class className="WebViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
             <relationships>
+                <relationship kind="action" name="backPressed:"/>
+                <relationship kind="action" name="forwardPressed:"/>
+                <relationship kind="action" name="toggleRefresh:"/>
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
