--- a/Bowdoin Tour Guide/MainStoryboard_iPhone.storyboard
+++ b/Bowdoin Tour Guide/MainStoryboard_iPhone.storyboard
@@ -98,41 +98,34 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" id="tLG-cn-xSb">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" id="cEf-93-VcV">
                                 <rect key="frame" x="0.0" y="372" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="UQc-if-d52"/>
-                                    <barButtonItem image="Back.png" width="16" style="plain" id="vQU-4c-Mec">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="DUv-Q2-SdJ"/>
+                                    <barButtonItem image="Back.png" width="16" style="plain" id="n6d-vk-fAe">
                                         <inset key="imageInsets" minX="9" minY="7" maxX="0.0" maxY="3"/>
                                         <connections>
-                                            <action selector="backPressed:" destination="Tu0-jG-DEn" id="IbQ-MJ-srY"/>
+                                            <action selector="backPressed:" destination="Tu0-jG-DEn" id="c4s-Hl-Vtq"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="UKj-vs-Rpv"/>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="7yc-Lg-74K"/>
-                                    <barButtonItem style="plain" systemItem="play" id="liP-Wy-CNt">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="anM-j1-R5j"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="we6-K2-0HA"/>
+                                    <barButtonItem style="plain" systemItem="play" id="eMQ-Rx-hmE">
                                         <connections>
-                                            <action selector="forwardPressed:" destination="Tu0-jG-DEn" id="qmr-Sh-xLB"/>
+                                            <action selector="forwardPressed:" destination="Tu0-jG-DEn" id="g0a-ov-p80"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Loo-2K-5kX"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="wHf-hj-Nft"/>
                                 </items>
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="guR-Lp-iXl"/>
-                        <barButtonItem systemItem="reply" id="8XE-Jv-gDQ"/>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="7hd-fy-i4v"/>
-                        <barButtonItem systemItem="refresh" id="ndb-p0-aMf"/>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="2WW-9x-ZAx"/>
-                        <barButtonItem systemItem="play" id="uX5-rP-Gf5"/>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Var-Ou-ybU"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Explore Bowdoin" id="mcn-6u-Vbw"/>
                     <connections>
+                        <outlet property="bar" destination="cEf-93-VcV" id="bdj-E1-bAz"/>
                         <outlet property="webView" destination="bdS-U3-iIT" id="uc6-tf-KzJ"/>
                     </connections>
                 </viewController>
@@ -185,6 +178,7 @@
                 <relationship kind="action" name="backPressed:"/>
                 <relationship kind="action" name="forwardPressed:"/>
                 <relationship kind="action" name="toggleRefresh:"/>
+                <relationship kind="outlet" name="bar" candidateClass="UIToolbar"/>
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
