--- a/Bowdoin Tour Guide/MainStoryboard_iPad.storyboard
+++ b/Bowdoin Tour Guide/MainStoryboard_iPad.storyboard
@@ -35,7 +35,7 @@
                         </barButtonItem>
                         <barButtonItem systemItem="action" id="one-bf-adi">
                             <connections>
-                                <segue destination="EfB-vp-t2e" kind="modal" identifier="pickTour" modalTransitionStyle="crossDissolve" id="Qgg-mf-69I"/>
+                                <segue destination="rQX-6d-Az7" kind="modal" identifier="pickTour" modalTransitionStyle="crossDissolve" id="6M8-LP-2lb"/>
                             </connections>
                         </barButtonItem>
                     </toolbarItems>
@@ -57,12 +57,26 @@
             </objects>
             <point key="canvasLocation" x="-1933" y="-111"/>
         </scene>
+        <scene sceneID="s7s-FM-B88">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MLb-gL-HDZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" modalTransitionStyle="crossDissolve" id="rQX-6d-Az7" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" barStyle="blackOpaque" id="0VE-Tu-nTl">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="EfB-vp-t2e" kind="relationship" relationship="rootViewController" id="5BX-gg-YYJ"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="-911" y="-1296"/>
+        </scene>
         <scene sceneID="nEb-jy-WNt">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BYh-Mf-SWN" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController modalTransitionStyle="crossDissolve" id="EfB-vp-t2e" customClass="SetupViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="8eE-w2-mgg">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <sections>
@@ -177,12 +191,13 @@
                             <outlet property="delegate" destination="EfB-vp-t2e" id="Uj0-Xa-lEp"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Please Choose Your Tour" id="LIq-Qx-R8I"/>
                     <connections>
                         <segue destination="3Jn-0v-G72" kind="modal" identifier="customizeTour" modalTransitionStyle="flipHorizontal" id="TDp-mw-jDE"/>
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="-911" y="-1300"/>
+            <point key="canvasLocation" x="9" y="-1296"/>
         </scene>
         <scene sceneID="80S-Ml-WFt">
             <objects>
@@ -196,7 +211,7 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="5" y="-1300"/>
+            <point key="canvasLocation" x="925" y="-1296"/>
         </scene>
         <scene sceneID="MzQ-OD-yNX">
             <objects>
@@ -228,7 +243,7 @@
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="937" y="-1300"/>
+            <point key="canvasLocation" x="1857" y="-1296"/>
         </scene>
         <scene sceneID="ur9-mu-bWm">
             <objects>
